[WK2] TiledBackingStore: Frame view re-layouts with wrong Fixed Visible Content Rect. https://bugs.webkit.org/show_bug.cgi?id=103428

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-11-30
Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

Set now appropriate fixed visible content rect before layout when viewport
attributes change.

* UIProcess/PageViewportController.cpp:
(WebKit::PageViewportController::syncVisibleContents):
(WebKit::PageViewportController::didChangeViewportAttributes):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::sendViewportAttributesChanged):

LayoutTests:

Unskipped corresponding test cases for EFL WK2.

* platform/efl-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/121844@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136231 268f45cc-cd09-0410-ab3c-d52691b4dbfc